# vtk-wasm-demos

./: .firebaserc  .gitignore  CMakeLists.txt  NOTICE  README.md  build-with-custom-vtk.sh  build.ps1  build.py  build.sh  clean.sh  debian.sh  firebase.json  index.html  new_package.json  package-lock.json  package.json  proxy.txt  publish.sh  setupProxy.js  tsconfig.json  vite.config.ts  webpack.config.js
.github/workflows/: build.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
Cones/: CMakeLists.txt  Cones.cxx  Cones.h  package-lock.json  package.json  webpack.config.js
Cones/src/: ConesViewer.cxx  ConesViewer.h  index.html  index.js  style.css
Cones/web/: app.js  configs.js  index.html  style.css  webgl.js  webgpu.js
ConesJS/: CMakeLists.txt  package-lock.json  package.json  webpack.config.js
ConesJS/src/: index.html  index.js
GeometryViewer/: CMakeLists.txt  package-lock.json  package.json  webpack.config.js
GeometryViewer/src/: ArrayBufferLimits.js  Chunkify.js  FileTransfer.js  GeometryViewer.cxx  GeometryViewer.h  WasmOptions.js  WebGPUSupport.js  index.html  index.js  style.css
cpp/ConesViewer/: CMakeLists.txt  ConesViewer.cxx  ConesViewer.h  config.h.in
cpp/GeometryViewer/: CMakeLists.txt  GeometryViewer.cxx  GeometryViewer.h  config.h.in
redirect/: index.html
src/: App.vue  main.ts  style.css
src/components/: Home.vue
src/components/ConesViewer/: ConesViewer.vue  ConesViewerFactory.d.ts  Properties.ts
src/components/GeometryViewer/: GeometryViewer.vue  GeometryViewerFactory.d.ts  Properties.ts
src/plugins/: vuetify.ts
src/router/: index.ts
src/utils/: chunkify.ts  fileDownload.ts  hexToRgb.ts  openDirectory.js  wasmConfigure.ts  wasmWebGPUInit.ts
src/views/: FourOhFour.vue  Home.vue
web/: index.html  style.css
